--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
-    "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
+    "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts",
+    "deploy": "opennext build && wrangler pages deploy .vercel/output/static"
+
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.61.1",
     "@payloadcms/next": "3.61.1",
     "@payloadcms/payload-cloud": "3.61.1",
     "@payloadcms/richtext-lexical": "3.61.1",
@@ -29,10 +32,10 @@
     "payload": "3.61.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-postgres": "3.61.1"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
+    "@opennextjs/cloudflare": "^1.11.0",
     "@playwright/test": "1.54.1",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
@@ -47,7 +50,8 @@
     "prettier": "^3.4.2",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.3"
+    "vitest": "3.2.3",
+    "wrangler": "^4.45.2"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0",
