--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts",
-    "deploy": "opennext build && wrangler pages deploy .vercel/output/static"
-
+    "opennext:build": "opennextjs-cloudflare build"
   },
   "dependencies": {
     "@payloadcms/db-postgres": "3.61.1",
