--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "opennext:build": "opennextjs-cloudflare build"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@payloadcms/db-postgres": "3.61.1",
     "@payloadcms/next": "3.61.1",
     "@payloadcms/payload-cloud": "3.61.1",
