--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,17 +2,10 @@ name = "payload-on-pages"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
-# Tell Pages where the static assets live
+# 👇 required when using wrangler.toml with Pages
 pages_build_output_dir = ".open-next/assets"
 
-# Tell Cloudflare which Worker bundle handles dynamic routes (SSR, /admin, /api, etc)
-main = ".open-next/worker.js"
-
-# Optional: limits memory for Pages Functions (helps big builds)
-workers_dev = false
-usage_model = "bundled"
-
-# Your Hyperdrive binding (for Supabase Postgres)
+# Your Hyperdrive binding (already created)
 [[hyperdrive]]
 binding = "HYPERDRIVE"
 id = "6b5a3d312ed94c6596b580c95ba65b19"
