--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,3 +10,5 @@ pages_build_output_dir = ".open-next"
 binding = "HYPERDRIVE"
 id = "6b5a3d312ed94c6596b580c95ba65b19"
 
+[alias]
+"node:sqlite" = "./shims/node-sqlite.js"
